// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicRoutes renders correctly when \`showContent\` is false 1`] = `
<div
  id="public-routes-container"
  style={
    Object {
      "display": "none",
    }
  }
>
  <Connect(GuestRoute)
    component={[Function]}
    exact={true}
    location={
      Object {
        "pathname": "/login",
      }
    }
    path="/login"
  />
  <Connect(GuestRoute)
    component={[Function]}
    exact={true}
    location={
      Object {
        "pathname": "/login",
      }
    }
    path="/signup"
  />
  <Connect(GuestRoute)
    component={[Function]}
    exact={true}
    location={
      Object {
        "pathname": "/login",
      }
    }
    path="/forgot_password"
  />
  <Connect(GuestRoute)
    component={[Function]}
    exact={true}
    location={
      Object {
        "pathname": "/login",
      }
    }
    path="/reset_password/:token"
  />
</div>
`;

exports[`PublicRoutes renders correctly when \`showContent\` is true 1`] = `
<div
  id="public-routes-container"
  style={
    Object {
      "display": "block",
    }
  }
>
  <Connect(GuestRoute)
    component={[Function]}
    exact={true}
    location={
      Object {
        "pathname": "/login",
      }
    }
    path="/login"
  />
  <Connect(GuestRoute)
    component={[Function]}
    exact={true}
    location={
      Object {
        "pathname": "/login",
      }
    }
    path="/signup"
  />
  <Connect(GuestRoute)
    component={[Function]}
    exact={true}
    location={
      Object {
        "pathname": "/login",
      }
    }
    path="/forgot_password"
  />
  <Connect(GuestRoute)
    component={[Function]}
    exact={true}
    location={
      Object {
        "pathname": "/login",
      }
    }
    path="/reset_password/:token"
  />
</div>
`;
